force-app/main/default/objects/AccountTeamMember/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <description>1. Not integration relevant
2. ZR
3. Helper Field to display the Account in Email Templates. Set by Flow &quot;ZR_Account_Team_Member_Before_Insert&quot;</description>
    <label>Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>