force-app/main/default/objects/AccountTeamMember/fields/Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Member_Name__c</fullName>
    <description>1. Integration irrelevant
2. ZR
3. Helper Field for Email-Templates to be able to use the User Name</description>
    <formula>Member__r.FirstName &amp;&quot; &quot;&amp;  Member__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Name</label>
    <type>Text</type>
</CustomField>